# test_pywebview

./: README.md  metro_stations.json  pyproject.toml
test_webview/: __init__.py  __main__.py  flask.py  utils.py
test_webview/static/js/: main.js
test_webview/static/styles/: main.css
test_webview/templates/: main.html  moscow.html
